--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -1,6 +1,6 @@
 
 \chapter{Anforderungserhebung}\label{sec:chapter5}
-In diesem Kapitel werden die Anforderungen an den in Kapitel 6 folgenden Vergleich der imperativen und deklarativen Modellierung für SE-Prozessmodelle erhoben.
+In diesem Kapitel werden die Anforderungen an den in Kapitel 5 folgenden Vergleich der imperativen und deklarativen Modellierung für SE-Prozessmodelle erhoben. Hierfür werden in Kapitel 4.1 die Vergleichskriterien vorgetsllt und erläutert.
 
 \section{Vergleichskriterien}\label{sec:chapter5:Vergleichskriterien}
 
